<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            app:srcCompat="@drawable/abogados" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:text="GESTION DE ABOGADOS"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Nombres y Apellidos"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtEspecialización"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Especialización"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtCosto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Costo por hora"
            android:inputType="number" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ingresar" />

        <Button
            android:id="@+id/btnVerMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ubBufete" />

        <Button
            android:id="@+id/btnUbicActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ubActual" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_eliminar" />

        <Button
            android:id="@+id/btnListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_listar" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Siguiente" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>